@@ -14,6 +14,7 @@ BR2_arm=y
 # BR2_m68k is not set
 # BR2_m68hc11 is not set
 # BR2_m68hc12 is not set
+# BR2_m9s12x is not set
 # BR2_mips is not set
 # BR2_mipsel is not set
 # BR2_nios2 is not set
@@ -56,7 +57,7 @@ BR2_BZCAT="bzcat"
 BR2_TAR_OPTIONS=""
 BR2_DL_DIR="$(BASE_DIR)/../archives"
 BR2_STAGING_DIR="$(BUILD_DIR)/staging_dir"
-BR2_NUTTX_DIR="$(TOPDIR)/../nuttx"
+BR2_NUTTX_DIR="$(TOPDIR)/../../nuttx"
 BR2_TOPDIR_PREFIX=""
 BR2_TOPDIR_SUFFIX=""
 BR2_GNU_BUILD_SUFFIX="pc-elf"
@@ -71,6 +72,7 @@ BR2_GNU_TARGET_SUFFIX="elf"
 # Binutils Options
 #
 # BR2_BINUTILS_VERSION_2_17 is not set
+# BR2_BINUTILS_VERSION_2_18 is not set
 # BR2_BINUTILS_VERSION_2_19 is not set
 BR2_BINUTILS_VERSION_2_19_1=y
 BR2_BINUTILS_VERSION="2.19.1"
@@ -80,6 +82,7 @@ BR2_EXTRA_BINUTILS_CONFIG_OPTIONS=""
 # GCC Options
 #
 BR2_PACKAGE_GCC=y
+# BR2_GCC_VERSION_3_3_6 is not set
 # BR2_GCC_VERSION_3_4_6 is not set
 # BR2_GCC_VERSION_4_2_4 is not set
 BR2_GCC_VERSION_4_3_3=y
@@ -102,7 +105,8 @@ BR2_INSTALL_LIBSTDCPP=y
 #
 # NuttX Binary Support
 #
-# BR2_PACKAGE_NXFLAT is not set
+BR2_PACKAGE_NXFLAT=y
+BR2_PACKAGE_GENROMFS=y
 
 #
 # Common Toolchain Options
