@@ -233,19 +233,19 @@
  * We will reuse this memory for coarse page tables as follows:
  */
 
-#define PGTABLE_PBASE             IMX_SDRAM0_PSECTION
-#define PGTABLE_SDRAM_PBASE       PGTABLE_PBASE
-#define PGTABLE_COARSE_PBASE      (PGTABLE_PBASE+0x00000800)
-#define PGTABLE_COARSE_PEND       (PGTABLE_PBASE+0x00003000)
-#define PTTABLE_PERIPHERALS_PBASE (PGTABLE_PBASE+0x00003000)
-#define PGTABLE_PEND              (PGTABLE_PBASE+0x00004000)
+#define PGTABLE_BASE_PADDR        IMX_SDRAM0_PSECTION
+#define PGTABLE_SDRAM_PADDR       PGTABLE_BASE_PADDR
+#define PGTABLE_COARSE_PBASE      (PGTABLE_BASE_PADDR+0x00000800)
+#define PGTABLE_COARSE_PEND       (PGTABLE_BASE_PADDR+0x00003000)
+#define PTTABLE_PERIPHERALS_PBASE (PGTABLE_BASE_PADDR+0x00003000)
+#define PGTABLE_PEND              (PGTABLE_BASE_PADDR+0x00004000)
 
-#define PGTABLE_VBASE             IMX_SDRAM_VSECTION
-#define PGTABLE_SDRAM_VBASE       PGTABLE_VBASE
-#define PGTABLE_COARSE_VBASE      (PGTABLE_VBASE+0x00000800)
-#define PGTABLE_COARSE_VEND       (PGTABLE_VBASE+0x00003000)
-#define PTTABLE_PERIPHERALS_VBASE (PGTABLE_VBASE+0x00003000)
-#define PGTABLE_VEND              (PGTABLE_VBASE+0x00004000)
+#define PGTABLE_BASE_VADDR        IMX_SDRAM_VSECTION
+#define PGTABLE_SDRAM_VADDR       PGTABLE_BASE_VADDR
+#define PGTABLE_COARSE_VBASE      (PGTABLE_BASE_VADDR+0x00000800)
+#define PGTABLE_COARSE_VEND       (PGTABLE_BASE_VADDR+0x00003000)
+#define PTTABLE_PERIPHERALS_VBASE (PGTABLE_BASE_VADDR+0x00003000)
+#define PGTABLE_VEND              (PGTABLE_BASE_VADDR+0x00004000)
 
 #define PGTABLE_COARSE_TABLE_SIZE (4*256)
 #define PGTABLE_COARSE_ALLOC      (PGTABLE_COARSE_VEND-PGTABLE_COARSE_VBASE)
